--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@loadable/component": "^5.15.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@react-hook/window-size": "^3.0.7",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "faker": "^5.5.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
+    "redux": "^4.1.1",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
